--- a/笔记.md
+++ b/笔记.md
@@ -21,4 +21,11 @@
 
    
 
-2. 
+2. 常见Transformer使用
+
+```java
+from torchvision import  transforms
+tensor=transforms.ToTensor()
+tensor_img=tensor(img)//将img类型转为tensor
+```
+
