--- a/笔记.md
+++ b/笔记.md
@@ -27,5 +27,13 @@
 from torchvision import  transforms
 tensor=transforms.ToTensor()
 tensor_img=tensor(img)//将img类型转为tensor
-```
+``` 
 
+3.  ```java
+   ##normalize
+   tensor_nor=transforms.Normalize([6,3,2],[9,3,5])
+   img_nor=tensor_nor(tensor_img)
+   write.add_image("Normalize",img_nor,2)
+    ```
+
+4. 
